# 42_crash

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  minishell  txt
include/: builtin.h  crash_readline.h  debug.h  exec.h  history.h  minishell.h  pars.h  readline.h  s_shell.h  s_terminfo.h  wrapper.h
include/struct/: s_cmdlst.h  s_history.h  s_lsthead.h  s_readline.h  s_redir_lst.h  s_redirect_lst.h  s_shell.h  s_terminfo.h
lib/libft/: Makefile
lib/libft/include/: libft.h
lib/libft/src/: cat_lines_tab.c  free_tab.c  ft_atoi.c  ft_calloc.c  ft_ctod.c  ft_intwid.c  ft_isalpha.c  ft_isdigit.c  ft_isempty_str.c  ft_isspace.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_skip_atoi.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  get_next_line_utils.c  putchar_fd.c  putendl_fd.c  putint.c  (+8 more)
src/: crash_readline.c  echo  env.c  exit.c  free.c  init.c  interact.c  main.c  pars.c  readline.c  term_init.c
src/env/: env_key_value.c  expand_env.c  getenv.c  getenv_idx.c  getenv_name.c  setenv.c  unsetenv.c
src/exec/: exec.c  pipeline.c  rebuild_path.c  redirect.c
src/exec/built_in/: cd.c  entry.c  env.c
src/execute/: exec.c  getcwd.c  is_exist.c  path.c  pipeline.c  rebuild_path.c  redirect.c  wait.c  wrapper.c
src/execute/built-in/: cd.c  echo.c  entry.c  env.c  exit.c  pwd.c
src/execute/built_in/: cd.c  echo.c  entry.c  env.c  exit.c  export.c  pwd.c  unset.c
src/execute/builtins/: echo.c  entry.c
src/execute/redirect/: out.c
src/pars/: add_newl.c  brckt_check.c  cmdlst.c  expand_env.c  get_buffer.c  get_qoutcount.c  get_sepch.c  heredoc.c  isnclosedquotes.c  lineptrjoin.c  pars.c  post_obrabotka.c  print_shit.c  redirect_lst.c  skip_spasech.c  sstrlen.c  strreplace.c  substr_ignore.c  validate.c  work_with_spase.c  xalloc.c
src/readline/: chrlst.c  clear.c  crash_readline.c  cursor.c  history.c  readline.c  termios.c
src/readline/history/: history.c  init.c  list_hist.c
src/wrappers/: getcwd.c
